// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div>
  <p
    class="css-1wc8m2q-Paragraph"
  >
    Paragraph
  </p>
</div>
`;

exports[`renders the component lg 1`] = `
<div>
  <p
    class="css-13i19vl-Paragraph"
  >
    Paragraph
  </p>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div>
  <p
    class="my-extra-class css-1wc8m2q-Paragraph"
  >
    Paragraph
  </p>
</div>
`;
